website/public/css/style.css
/* Modern CSS for Harold L. King & Co. */
html {
  font-family: Arial, Helvetica, sans-serif;
  box-sizing: border-box;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  margin: 0;
  background-color: #0c2635;
  color: #000;
}

img {
  border: none;
  max-width: 100%;
  height: auto;
}

/* Header Styles */
#header {
  margin: 0 auto;
  padding: 40px 20px;
  max-width: 1200px;
  position: relative;
}

.header-content {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 20px;
  background-color: rgb(13, 42, 58);
  padding: 20px;
}

.logo {
  width: 57px;
  height: 84px;
  flex-shrink: 0;
}

.company-info {
  flex: 1;
}

.company-name {
  color: white;
  font-family: Batang, serif;
  font-size: 45px;
  font-weight: bold;
  margin: 0 0 10px 0;
  line-height: 1.2;
}

.tagline {
  color: white;
  margin: 0;
  font-size: 16px;
}

.header-image {
  height: 130px;
  width: auto;
  flex-shrink: 0;
}
#navigation ul {
  margin: 0;
  padding: 4px 0 3px;
  background: transparent url(../images/bg-menu.gif) repeat-x scroll 0% 50%;
  height: 40px;
  width: 735px;
  list-style-type: none;
  list-style-image: none;
  list-style-position: outside;
}
#navigation li {
  margin: 0 5px;
  float: left;
  font-size: 16px;
  line-height: 40px;
  text-align: center;
}
#navigation li.first {
  margin-left: 0;
}
#navigation li.selected {
  background-color: #b7c2c8;
}
#navigation a {
  padding: 0 10px;
  color: #092f44;
  font-weight: bold;
  text-decoration: none;
  text-shadow: #eaeaea 1px 1px 0;
}
#navigation a:hover {
  color: #0a2d43;
}
#search {
  padding: 13px 0 0;
  background: transparent url(../images/bg-search.gif) no-repeat scroll right bottom;
  height: 47px;
  width: 268px;
  position: absolute;
  bottom: -20px;
  right: 0;
}
#search form {
  margin: 0;
  padding: 5px 4px 4px;
}
#search input {
  float: left;
  line-height: 38px;
}
#search .txtfield {
  border:  none;
  margin: 0;
  padding: 0;
  color: #6e6e6e;
  font-size: 15px;
  font-style: italic;
  height: 38px;
  width: 234px;
}
#search .button {
  border:  none;
  margin: 0;
  padding: 0;
  background: transparent url(../images/spotlight.gif) no-repeat scroll right center;
  cursor: pointer;
  height: 38px;
  width: 20px;
}
#homepage {
  padding: 20px 0 0;
  background-color: #ffffff;
  height: 430px;
}
#homepage p {
  margin: 0;
}
#homepage .body {
  margin: 0 auto;
  width: 1200px;
}
#homepage div.images {
  padding: 10px 0px 40px;
  float: right;
  height: 420px;
  width: 870px;
  overflow: hidden;
}
#homepage div.images img.preview {
  float: left;
  margin-right: 2px;
}
#homepage div.images img.last {
  position: relative;
  top: -2px;
}
#homepage .details {
  padding: 10px 20px 40px 10px;
  color: #2f2f2f;
  height: 350px;
  width: 300px;
}
#homepage .details p {
  color: #646c6f;
  font-size: 14px;
  line-height: 20px;
  text-align: justify;
}
#homepage .details p span {
  padding: 0 0 20px;
  color: #073f5a;
  display: block;
  font-size: 16px;
  line-height: 20px;
  text-align: center;
}
#homepage .details p span a {
  color: #073f5a;
  font-weight: bold;
  text-decoration: none;
}
#homepage .footer {
  margin: 0 auto;
  height: 46px;
  width: 960px;
  position: relative;
}
#homepage div.footer ul {
  margin: 0 auto;
  padding: 0;
  background-color: #dcdcdc;
  width: 960px;
  list-style-type: none;
  list-style-image: none;
  list-style-position: outside;
  position: absolute;
  bottom: -80px;
}
#homepage div.footer ul li {
  padding: 20px 20px 18px;
  float: left;
  width: 280px;
}
#homepage div.footer ul li img {
  float: left;
  margin-right: 10px;
}
#homepage div.footer ul li p {
  margin: 0;
  color: #363636;
  font-size: 14px;
  height: 88px;
  line-height: 20px;
}
#homepage div.footer ul li p a {
  color: #010101;
  font-weight: bold;
  text-decoration: none;
}
#homepage div.footer ul li.selected {
  background-color: #e9f1f4;
}
#homepage div.footer ul li.selected p, #homepage div.footer ul li.selected p a {
  color: #5c6164;
}
#homepage div.footer span.bottom-shadow {
  background: transparent url(../images/bottom-shadow.gif) no-repeat scroll left top;
  display: block;
  height: 20px;
  width: 960px;
  position: absolute;
  bottom: -100px;
}
#contents {
  padding: 40px 0 20px;
  background: transparent url(../images/bg-content.gif) repeat scroll 0% 50%;
}
#contents div.body {
  margin: 0 auto 20px;
  color: #fdfffa;
  width: 960px;
}
#main {
  margin: 60px 10px 0 300px;
  padding: 20px 0 20px 20px;
  background-color: #03354e;
  width: 630px;
}
#main span, #main p {
  margin: 0;
  color: #aeb4b4;
  font-size: 14px;
  line-height: 20px;
  padding-right: 20px;
  text-align: justify;
}
#main span {
  color: #fdfffa;
  font-size: 16px;
}
#main p a {
  color: #aeb4b4;
  font-weight: bold;
  text-decoration: none;
}
#main span a {
  color: #fdfffa;
  font-weight: bold;
  text-decoration: none;
}
#main ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
  list-style-image: none;
  list-style-position: outside;
  height: 355px;
}
#main ul li {
  float: left;
  width: 315px;
}
#main ul li a {
  margin: 0 40px 0 0;
  color: #fdfffa;
  display: block;
  height: 114px;
  text-decoration: none;
}
#main ul li img {
  float: left;
}
#main ul li h3 {
  margin: 0;
  line-height: 25px;
  padding-top: 35px;
}
#main ul li p {
  padding: 6px 40px 20px 0;
  clear: both;
}
#sidebar {
  margin: 0;
  padding: 20px 20px 0 10px;
  float: left;
  width: 270px;
}
#sidebar h3 {
  margin: 0 0 20px;
  font-size: 16px;
  font-weight: bold;
}
#sidebar ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
  list-style-image: none;
  list-style-position: outside;
  height: 420px;
}
#sidebar ul li {
  font-size: 14px;
  line-height: 20px;
  padding-bottom: 10px;
}
#sidebar ul li span {
  color: #456d87;
  display: block;
  font-size: 12px;
  line-height: 20px;
  margin-bottom: 10px;
}
/* ... */

